--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "element-ui": "^2.7.2",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.0",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
@@ -23,6 +26,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "typescript": "^3.4.3",
+    "vue-axios": "^2.1.4",
     "vue-template-compiler": "^2.5.21"
   },
   "postcss": {
