修改语言类型

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-*.ts linguist-language=TypeScript+Vue
-*.vue linguist-language=TypeScript+Vue
-*.js linguist-language=TypeScript+Vue
-*.css linguist-language=TypeScript+Vue
-*.html linguist-language=TypeScript+Vue
+# *.ts linguist-language=TypeScript+Vue
+# *.vue linguist-language=TypeScript+Vue
+# *.js linguist-language=TypeScript+Vue
+# *.css linguist-language=TypeScript+Vue
+# *.html linguist-language=TypeScript+Vue
